--- a/app/src/main/res/layout/adapter_pdf.xml
+++ b/app/src/main/res/layout/adapter_pdf.xml
@@ -9,6 +9,24 @@
         android:layout_height="70dp"
         android:id="@+id/iv_image"
         android:scaleType="fitXY"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/pdf_icon"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_name"
+        android:text="File Name"
+        android:layout_toRightOf="@id/iv_image"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:paddingRight="10dp"
+        android:textSize="15sp"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
